--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>IL Redistricting Collaborative 2023 Remapping Survey</title>
+    <link rel="stylesheet" type="text/css" href="./fonts/chivo/Chivo.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./fonts/source-serif/SourceSerif4.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./fonts/alternate-gothic-pro/AlternateGothic.css"
+    />
     <link rel="stylesheet" type="text/css" href="./style.min.css" />
   </head>
   <body>
-    <div id="app" class="row"></div>
+    <div id="app"></div>
     <script src="main.min.js"></script>
   </body>
 </html>
