--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>IL Redistricting Collaborative 2023 Remapping Survey</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./fonts/font-awesome/css/fontawesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./fonts/font-awesome/css/brands.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./fonts/font-awesome/css/solid.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="./fonts/chivo/Chivo.css" />
     <link
       rel="stylesheet"
